Fixed content wrapper on mobile

--- a/style.css
+++ b/style.css
@@ -356,13 +356,9 @@ footer {
   }
   
   .content-wrapper {
-    margin: 0 15px;
+    margin: 0 20px;
   }
 
-  #background,
-  #publications {
-  padding-bottom: 80px;
-  }
 }
 
 @media screen and (min-width:768px) {
